# talendar

./: Cargo.toml  LICENSE  README.md  clientsecret.json
src/: app.rs  calendar_day_widget.rs  event_widget.rs  google_cal_backend.rs  inspect_day_popup.rs  inspect_event_popup.rs  main.rs  utils.rs
