[package]
name = "talendar"
version = "0.1.0"
authors = ["liamwb <liam.woodbaker@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = { version = "0.29.0", features = ["serde", "widget-calendar"]}
color-eyre = "0.6.3"
time = "0.3.37"
google-calendar3 = "6.0.0"
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.137"
tokio = {version = "1.43.0", features = ["rt-multi-thread"]}
oauth2 = "4.4.2"
url = "2.5.4"
reqwest = {version = "0.12.12", features = ["json"]}
webbrowser = "1.0.3"
tiny_http = "0.12.0"
base64 = "0.22.1"
sha2 = "0.10.8"
rand = "0.8.5"
thiserror = "2.0.10"
directories = "5.0.1"
tokio-retry = "0.3.0"
hyper = "1.5.2"
chrono = "0.4.39"
hyper-rustls = "0.27.5"
rustls = "0.23.21"
localzone = { version = "0.3.1", features = ["auto_validation"] }
